crates/daemon/tests/snapshots/cli_help__cli_help_rules.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Manage rules

Usage: mxr rules [OPTIONS] [COMMAND]

Commands:
  treatment-preview  Preview a saved rule or an unsaved JSON form; returns the token Apply requires
  treatment-apply    Apply exactly a sorting preview, rejecting changed mail or rules
  list
  show
  add
  edit
  validate
  enable
  disable
  delete
  dry-run
  history
  help               Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
