crates/daemon/tests/snapshots/cli_help__cli_help_rules_add.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Usage: mxr rules add [OPTIONS] --when <CONDITION> --then <ACTION> <NAME>

Arguments:
  <NAME>

Options:
      --account <ACCOUNT>
      --when <CONDITION>
      --then <ACTION>
      --priority <PRIORITY>  [default: 100]
  -h, --help                 Print help
