crates/daemon/tests/snapshots/cli_help__cli_help_rules_delete.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Usage: mxr rules delete <RULE>

Arguments:
  <RULE>

Options:
  -h, --help  Print help
