crates/daemon/tests/snapshots/cli_help__cli_help_rules_disable.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Usage: mxr rules disable <RULE>

Arguments:
  <RULE>

Options:
  -h, --help  Print help
