crates/daemon/tests/snapshots/cli_help__cli_help_rules_dry-run.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Usage: mxr rules dry-run [OPTIONS] [RULE]

Arguments:
  [RULE]

Options:
      --all
      --after <AFTER>
  -h, --help           Print help
