crates/daemon/tests/snapshots/cli_help__cli_help_rules_edit.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Usage: mxr rules edit [OPTIONS] <RULE>

Arguments:
  <RULE>

Options:
      --name <NAME>
      --when <CONDITION>
      --then <ACTION>
      --priority <PRIORITY>
      --enable
      --disable
  -h, --help                 Print help
