crates/daemon/tests/snapshots/cli_help__cli_help_rules_list.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Usage: mxr rules list

Options:
  -h, --help  Print help
